syntax = "proto3";
package proto;

option go_package = "gruler/pkg/proto";
message Request{
  HttpRequest httpRequest = 1;
}

message HttpRequest{
  string method = 1;
  string clientIp = 2;
  string path = 3;
  map<string, string> headers = 4;
}